recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:1: error: not found: value levels
  if (levels==0) {
      ^